--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@babel/polyfill": "^7.10.4",
     "@babel/preset-env": "^7.10.4",
     "@babel/preset-react": "^7.10.4",
+    "@svgr/webpack": "^5.4.0",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
@@ -47,21 +48,40 @@
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.3.0",
     "mini-css-extract-plugin": "^0.9.0",
-    "react": "^16.13.1",
+    "node-sass": "^4.14.1",
     "react-app-polyfill": "^1.0.6",
-    "react-dom": "^16.13.1",
     "sass": "^1.26.10",
     "sass-loader": "^9.0.2",
+    "style-loader": "^1.2.1",
     "terser-webpack-plugin": "^3.0.8",
+    "url-loader": "^4.1.0",
     "webpack": "^4.44.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.14.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.30",
+    "@fortawesome/free-brands-svg-icons": "^5.14.0",
+    "@fortawesome/free-regular-svg-icons": "^5.14.0",
+    "@fortawesome/free-solid-svg-icons": "^5.14.0",
+    "@fortawesome/react-fontawesome": "^0.1.11",
     "babel-cli": "^6.26.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-react-app": "^3.1.2",
+    "bootstrap": "^4.5.0",
     "core-js": "^3.6.5",
-    "normalize.css": "^8.0.1"
+    "mdbreact": "^4.27.0",
+    "normalize.css": "^8.0.1",
+    "react": "^16.13.1",
+    "react-chartjs-2": "2.9.0",
+    "react-dom": "^16.13.1",
+    "react-image-lightbox": "5.1.1",
+    "react-numeric-input": "2.2.3",
+    "react-popper": "^1.3.7",
+    "react-scroll": "1.7.16",
+    "react-toastify": "5.5.0",
+    "react-transition-group": "4.3.0",
+    "react-router-dom": "^5.2.0"
   }
 }
